FrostWire 2.6.4 build 712 - FEB/15/2023
- SearchManager optimizations
- Less aggressive okhttpclient thread pools to not exhaust http connections
- dev:com.android.tools.build:gradle:7.4.1
- dev:com.google.firebase:firebase-crashlytics-gradle:2.9.4
- com.google.android.material:material:1.8.0
- androidx.exifinterface:exifinterface:1.3.6
- Zooqle search removed, service defunct

FrostWire 2.6.3 build 711 - JAN/31/2023
 - com.chaquo.python:gradle:14.0.2
 - python:yt_dlp-2023.1.6
 - python:Brotli-1.0.7
 - python: pycryptodomex-3.9.4
 - python: websockets-10.4
 - com.google.android.material:material:1.7.0
 - com.android.tools.build:gradle:7.4.0
 - explicit declared androidx.lifecycle:lifecycle-viewmodel:2.5.1 to avoid conflicts
 - explicit declared androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1 to avoid conflicts
 - androidx.exifinterface:exifinterface:1.3.5
 - MainApplication onCreate logs yt_dlp version

FrostWire 2.6.2 build 708 - OCT/19/2022
 - removed MobileFuse adapter
 - telluride build 23
 - supports downloads of IG Reels, YT Stories and TikToks
 - basic uses update dialog when OTA message available
 - com.google.re2j:re2j:1.7
 - com.google.code.gson:gson:2.9.0
 - androidx.exifinterface:exifinterface:1.3.4
 - com.google.gms:google-services:4.3.14
 - com.google.firebase:firebase-crashlytics-gradle:2.9.2
 - androidx.annotation:annotation:1.5.0
 - com.android.tools.build:gradle:7.3.1

FrostWire 2.6.1 build 706 - SEP/11/2022
 - jlibtorrent 1.2.17.0 upgrade
 - Android NDK r25b
 - jlt:boost 1.80 upgrade
 - jlt:openssl 1.1.1q upgrade
 - jlt:gradle 7.5.1 upgrade
 - libtorrent update to RC_1_2 b5873f23b40ef9054b2bd6a4db2a2d327a56d4b1
 - lt:fix wanted_done/done accounting when force-rechecking
 - lt:expose userdata via torrent_handle (back-port from 2.0)
 - lt:fix renaming of filenames that are too long for the filesystem
 - lt:made UPnP and LSD code avoid using select_reactor (to work around an issue on windows in boost.asio < 1.80)