@@ -30,12 +30,14 @@ buildscript {
         maven { url "https://chaquo.com/maven" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.1'
+        // The project is using an incompatible version (AGP 7.4.1) of the Android Gradle plugin. Latest supported version is AGP 7.3.1
+        // classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath 'org.codehaus.groovy:groovy-all:3.0.9'
 
         classpath 'net.sf.proguard:proguard-gradle:6.2.2'
 
-        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
 
         classpath 'androidx.annotation:annotation:1.5.0'
@@ -98,13 +100,13 @@ boolean isAssembleRelease = gradle.startParameter.taskNames.contains("assembleRe
 
 android {
 
-    compileSdkVersion 32
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId 'com.frostwire.android'
         versionName project.ext.versionName
         minSdkVersion 24 // Android 7.0 Nougat, they added ifaddr (as an option to netlink)
-        targetSdkVersion 32 // Android 12
+        targetSdkVersion 33 // Android 12
         multiDexEnabled true
 
         ndk {
@@ -206,7 +208,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
-    implementation 'androidx.browser:browser:1.4.0' // cant update unless in sdk 33 / android 13
+    implementation 'androidx.browser:browser:1.5.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.exifinterface:exifinterface:1.3.6'
